data/derived/comb/progs/unify/prog5104.ml.out
Characters 70-71:
  | h::t -> t + digitalRoot(sumList(h));;
            ^
Error: This expression has type int list
       but an expression was expected of type int
